@@ -304,6 +304,8 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 
 	Stu Redman:
 		* Fix for Transferred / Completed not updated in remote GUI.
+		* Fix for PARTSIZE not beeing 64 bits. Enums are always 32
+		  bits, even if we use a 64 bit constant to initialize it.
 
 	Trevino:
 		* Fix for "Both the Unknown client icon and the Unknown status
